--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,9 @@ buildscript {
         }
 
         dependencies {
-            classpath 'com.android.tools.build:gradle:4.0.1'
+            classpath 'com.android.tools.build:gradle:7.4.2'
+            classpath 'com.google.gms:google-services:4.4.0'
+            classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
         }
     }
 }
@@ -18,11 +20,11 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
-    compileSdkVersion safeExtGet('JitsiMeet_compileSdkVersion', 31)
-    buildToolsVersion safeExtGet('JitsiMeet_buildToolsVersion', '31.0.0')
+    compileSdkVersion safeExtGet('JitsiMeet_compileSdkVersion', 34)
+    buildToolsVersion safeExtGet('JitsiMeet_buildToolsVersion', '33.0.2')
     defaultConfig {
         minSdkVersion safeExtGet('JitsiMeet_minSdkVersion', 24)
-        targetSdkVersion safeExtGet('JitsiMeet_targetSdkVersion', 31)
+        targetSdkVersion safeExtGet('JitsiMeet_targetSdkVersion', 34)
         versionCode 1
         versionName "1.0"
 
@@ -60,7 +62,7 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    implementation ('org.jitsi.react:jitsi-meet-sdk:6.2.2') {
+    implementation ('org.jitsi.react:jitsi-meet-sdk:10.2.1') {
         transitive = true
     }
 }
